--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   latlong2: ^0.8.1
   geolocator: ^9.0.2
   image_picker: ^0.8.3+3
+  file_picker: ^5.2.11
+  http: ^0.13.6
   
 
 dev_dependencies:
