--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,13 +31,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  flutter_map: ^3.1.0
+  cupertino_icons: ^1.0.5
+  flutter_map: ^4.0.0
   latlong2: ^0.8.1
   geolocator: ^9.0.2
-  image_picker: ^0.8.3+3
-  file_picker: ^5.2.11
+  image_picker: ^0.8.7+5
+  file_picker: ^5.3.0
   http: ^0.13.6
+  charts_flutter_new: ^0.12.0
+  lottie: ^2.3.2
+  sn_progress_dialog: ^1.1.3
+  shared_preferences: ^2.1.1
   
 
 dev_dependencies:
@@ -49,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,6 +68,7 @@ flutter:
 
   assets:
     - assets/img/
+    - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
