--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,20 @@ dependencies:
   latlong2: ^0.8.1
   geolocator: ^9.0.2
   image_picker: ^0.8.7+5
-  file_picker: ^5.3.0
+  file_picker: ^5.3.1
   http: ^0.13.6
   charts_flutter_new: ^0.12.0
   lottie: ^2.3.2
   sn_progress_dialog: ^1.1.3
   shared_preferences: ^2.1.1
+  firebase_core: ^2.13.0
+  firebase_storage: ^11.2.1
+  camera_web: ^0.3.1+4
+  postgres: ^2.6.1
+  postgresql2: ^1.0.4
+  dotted_border: ^2.0.0+3
+  carousel_slider: ^4.2.1
+  charts_flutter: ^0.12.0
   
 
 dev_dependencies:
